tests/neg/semantic_enum_type_mismatch.baa
// EXPECT: عدم تطابق نوع التعداد

تعداد أ {
    س،
}

تعداد ب {
    س،
}

صحيح الرئيسية() {
    تعداد أ م = أ:س.
    م = ب:س.
    إرجع ٠.
}
